--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.0.7 2013-04-29
+
+* Updated gemspec name to reflect actual name.
+
 === 0.0.6 2013-04-29
 
 * Member Call model completed and tested.
