--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.0.8 2013-04-29
+
+* Updated the homepage url to fix install warning.
+
 === 0.0.7 2013-04-29
 
 * Updated gemspec name to reflect actual name.
