--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.2.0 2013-05-10
+
+* Fleshed out the remaining review api calls.
+* Converted all models to static update and destroy calls and updated their tests.
+
 === 0.1.14 2013-05-08
 
 * Added company api calls and rspec tests.
