--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.2.1 2013-05-22
+
+* added a new model ReviewsCount
+* Comapany has a reviewsCount
+
 === 0.2.0 2013-05-10
 
 * Fleshed out the remaining review api calls.
