Added the company user model and tests.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.2.6 2013-06-03
+
+* Added the CompanyUser model and tests.
+
 === 0.2.5 2013-05-31
 
 * Renamed the ReviewTopic model to Topic and updated the Review model and relavent tests
