--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-=== 0.2.10 2013-06-12
+=== 0.2.12 2013-06-13
+
+* Added the TerminationNotice model and tests.
+
+=== 0.2.11 2013-06-12
 
 * Adding a unsubscribe method to Contact 
 
