[addresses #51914471] Added api methods to the contact model and tests. Changed the way the nonce was handled in the tests.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 0.3.2 2013-06-18
+
+* Cleaned up message generation.
+* Better nonce handling for spec tests. There should not be random failures due to the nonce now.
+* Filled out the Contact model methods.
+
 === 0.3.1 2013-06-17
 
 * Converting symbols to strings before creating the message.
