--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.4 2013-06-18
+
+* Added search method to Contact model.
+
 === 0.3.3 2013-06-18
 
 * Fixed a problem with initializing the nonce.
