--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.9 2013-06-26
+
+* Change the parameters for TerminationNotice.dismiss
+
 === 0.3.8 2013-06-25
 
 * Add the EmailKey model and tests.
