--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.11 2013-06-28
+
+* Update the create and update parameter name to be consistent with rails.
+
 === 0.3.10 2013-06-28
 
 * Added the ReviewWithdrawalRequest api calls.
