--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.3.12 2013-07-01
+
+* Add the ReviewChallenge api methods and tests.
+* Add the ChallengeCommunication model and tests.
+
 === 0.3.11 2013-06-28
 
 * Update the create and update parameter name to be consistent with rails.
