--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.13 2013-07-02
+
+* Removing reference to open_invitation field from the Review model.
+
 === 0.3.12 2013-07-01
 
 * Add the ReviewChallenge api methods and tests.
