--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.3.14 2013-07-02
+
+* Add company_id and contact_id back into the Review modal as simple attributes when
+  the full company or contact are not needed.
+
 === 0.3.13 2013-07-02
 
 * Removing reference to open_invitation field from the Review model.
