--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.18 2013-07-03
+
+* Add email_invitation_id to review model.
+
 === 0.3.17 2013-07-03
 
 * Fix problem with ChallengeCommunication review challenge reference.
