--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.19 2013-07-04
+
+* Add promo nd account_level to lobbyist.
+
 === 0.3.18 2013-07-03
 
 * Add email_invitation_id to review model.
