--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.20 2013-07-15
+
+* Add email_key and accessed_at to EmailInviation model
+
 === 0.3.19 2013-07-04
 
 * Add promo nd account_level to lobbyist.
