--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.21 2013-07-09
+
+* Add promo nd account_level to lobbyist.
+
 === 0.3.20 2013-07-08
 
 * Add promo nd account_level to lobbyist.
