--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.24 2013-07-12
+
+* Fixed argument error with ClientError.
+
 === 0.3.23 2013-07-11
 
 * Added the last message to the Unauthorized exception.
