--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.3.28 2013-07-19
+
+* Added tests for the customer call proxy model.
+* Added the count meta attribute to the customer call proxy model.
+
 === 0.3.27 2013-07-18
 
 * Added the CustomerCall proxy model.
