[Addressess #53526071] Lobbyist related code, more associations for

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.30 2013-07-19
+
+* Added more associations to company and customer call proxy model.
+
 === 0.3.29 2013-07-19
 
 * Added company and contact attributes to the customer call proxy model.
