--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.27 2013-07-22
+
+* Added the timezone field to the company proxy model.
+
 === 0.3.26 2013-07-17
 
 * change the field name key to email_key for email_invitations model
