--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.3.33 2013-07-24
+
+* Added review_suggestion model.
+
 === 0.3.32 2013-07-23
 
 * Added additional attributes to the customer call proxy model.
