--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added reset_password call to company user proxy model.
+
 === 0.3.35 2013-09-04
 
 * Added the reset_password call to the CompanyUser proxy model.
