--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Fixed reset_password parameters for the company_user proxy model.
 * Added terminate method to the company proxy model.
 * Added reset_password call to company user proxy model.
 
