[addresses #57506230] Add admin performance event model. The admin performance event proxy model was added along with tests. Also fixed the customer call create method to be a POST instead of a PUT call. Removed unneeded attr_accessor calls from a couple proxy models.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Removed unneeded attr_accessor calls from termination_notice and member_call proxy models.
+* Added admin_performance_event proxy model and tests.
 * Added enterprise model.
 * Added enterprise_settings model.
 * Added default functionality to match API's default responses to Lobbyist::Base.
