[addresses #57840700] Removed empty hashes. The calls that were sending empty hashes have been reverted back to their previous form. Fixed the contact unsubscribe call to pass parameters correctly.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Reverted models that were sending empty hashes back to their previous form.
 * Removed unneeded attr_accessor calls from termination_notice and member_call proxy models.
 * Added admin_performance_event proxy model and tests.
 * Added enterprise model.
