--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 0.3.37 2013-10-09
+
+* Added free_trials model
+* Added handwritten_reviews model
+
+
 === 0.3.37 2013-10-03
 
 * Fixed unauthorized exception creation edge case when no message is sent from the server.
