[addresses #59458192] Add company index call. The company lobbyist proxy model now supports an index call.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added Company list method.
 * Removed unnecessary CGI escape of message.
 * Removed CompanyUser attributes.
 * Adding company id parameter for Contact update call.
