[addresses #59587406] Added the handwritten_review_credit proxy model.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added handwritten_review_credit proxy model.
 * Added Company list method.
 * Removed unnecessary CGI escape of message.
 * Removed CompanyUser attributes.
