[Addresses #58990556]CHANGELOG: updated with changes for metrics

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@
 * Added free_trials proxy model
 * Added handwritten_reviews proxy model
 * Altered ChallengeCommunication to use Lobbyist ReviewChallenge reference.
+* Added metrics proxy model
 
 === 0.3.37 2013-10-03
 
