--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+=== 0.3.39 2013-10-31
+* removing field average_changed from company
 === 0.3.38 2013-10-28
 
 * Added insufficient_handwritten_credits endpoint to the contact proxy model.
