[addresses #60379850] Removed average_changed field.
The field was mistakenly added back into the company proxy model during a revert. Removing the field again.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Removed average_changed field from company.
 * Removed transaction receipt fields from the Company proxy model.
 * Added contact transcribe_allowed api call.
 * Removed admin_user_id from MemberCall.list arguments.
