--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 * Added company_subscription list, find and update methods.
+* Updated appointment proxy model list method to use collection.
+* Added company_transaction proxy model.
 
 === 0.4.0 2013-12-10
 
