[addresses #61586562] Skip and unskip added.
The skip and unskip methods were added to the company subscription proxy model. Also added the scheduled payment proxy model for displaying a list of skipped payments.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added the scheduled payment proxy model.
+* Added skip and unskip methods to the company subscription proxy model.
 * Added company_subscription list, find and update methods.
 * Updated appointment proxy model list method to use collection.
 * Added company_transaction proxy model.
