[addresses #64242732] Adding V2 capability to Lobbyist.
Also added attr_accessor calls back in for V1 models because not having them causes problems with creating rails forms.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added API V2 support.
+* Added attr_accessor attributes back to V1 models.
 * Added wants_sms, wants_calls, wants_direct_mail to contact proxy model.
 * Added attr_accessor calls back into the contact proxy model.
 * Added the scheduled payment proxy model.
