--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Adjusted V2 base parsing code to allow for parsing a different model in the returned json.
+* Added Enterprise Locations call to the V2 enterprise model.
+
 === 0.5.5 2014-04-15
 
 * Added the Company Settings update method for V2.
