[addresses #70316730] Added company reactivate.
The V2 api for company did not have the reactivate api call.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added company reactivate method to V2.
 * Fixed enterprise user create method.
 * Fixed enterprise user parameter name.
 * Adjusted V2 base parsing code to allow for parsing a different model in the returned json.
