[addresses #70327722] Added reset-password method.
The enterprise user reset password method was added.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added reset password method to V2 enterprise user.
 * Added company reactivate method to V2.
 * Fixed enterprise user create method.
 * Fixed enterprise user parameter name.
