--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+===
+
+* Added HandwrittenReview model for V2 with find, list and metrics methods
+
 === 0.5.6 2014-04-29
 
 * Remove company user params from company create call.
@@ -5,6 +9,7 @@
 * Added company reactivate method to V2.
 * Fixed enterprise user create method.
 * Fixed enterprise user parameter name.
+* Added reviewTopic and PrivateFeedbackTopic to ve
 * Adjusted V2 base parsing code to allow for parsing a different model in the returned json.
 * Added Enterprise Locations call to the V2 enterprise model.
 
