--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
+* Added Appointment model for V2 with list method.
 * Added email invitation metrics proxy model.
 * Added reset functionality for email invitations.
 * Added EmailInvitation proxy model for V2 API.
-* Added HandwrittenReview model for V2 with find, list and metrics methods.
+* Added HandwrittenReview model for V2 with find, list, update methods.
+* Added HandwrittenReviewMetrics model for V2 with list method.
 
 === 0.5.6 2014-04-29
 
