[addresses #72921548] Rename kiosk review model.
Renamed the kiosk review model to review confirmation.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added reset endpoint to ReviewConfirmation proxy model.
+* Rename kiosk review proxy model to ReviewConfirmation.
 * Added Kiosk Review proxy model.
 
 === 0.5.9 2014-06-11
