[addresses #72994408] Added customer create method.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added the create method to the Customer proxy model.
 * Added reset endpoint to ReviewConfirmation proxy model.
 * Rename kiosk review proxy model to ReviewConfirmation.
 * Added Kiosk Review proxy model.
