[addresses #73725684] Added manage-metrics endpoint.
The manage metrics are used on the top of the Manage Reviews page.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added the manage-metrics endpoint to the ReviewMetrics model.
 * Added the create method to the Customer proxy model.
 * Added reset endpoint to ReviewConfirmation proxy model.
 * Rename kiosk review proxy model to ReviewConfirmation.
