--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Updated SocialNetworkProfile and SocialNetworkPage proxy models.
+
 === 0.5.17 2014-10-15
 
 * Adding MemberInsightMetrics proxy model.
