--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added temp_s3_url attribute for FrontTemplate objects.
 * Added FrontTemplate proxy model.
 * Added CommunicationCampaign create method.
 
