[Addresses #81524852]CsvUpload: add list and process_file methods
Why: for use with Admin area and CSV file processing.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added CsvUpload index and process_file methods
+
 === 0.5.19 2014-12-22
 
 * Added AlgorithmTestRun and AlgorithmTestRunContact proxy models.
