--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Removed unneeded attribute from V2::FrontTemplate.
+
 === 0.5.19 2014-12-22
 
 * Added AlgorithmTestRun and AlgorithmTestRunContact proxy models.
