[addresses #84990298] Adding recommended budget.
The communication campaing model now has the recommended budget field.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added recommended_budget to V2::CommunicationCampaign proxy model.
 * Removed unneeded attribute from V2::FrontTemplate.
 
 === 0.5.19 2014-12-22
