--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added new algorithm test result fields.
+
 === 0.5.20 2015-01-07
 
 * Added recommended_budget to V2::CommunicationCampaign proxy model.
