--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added transaction_grouping_interval to AlgorithmTestRun proxy model.
+
 === 0.5.20 2015-01-07
 
 * Added recommended_budget to V2::CommunicationCampaign proxy model.
