--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Updated the CommunicationCampaign proxy model attributes.
 * Added transaction_grouping_interval to AlgorithmTestRun proxy model.
 
 === 0.5.20 2015-01-07
