--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added new fields to the Communication Campaign.
 * Updated the CommunicationCampaign proxy model attributes.
 * Added transaction_grouping_interval to AlgorithmTestRun proxy model.
 * Added new algorithm test result fields.
