[addresses #86268734] New feature fields added.
The account level proxy model now has the new features fields.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added feature fields to AccountLevel.
 * Added new fields to the Communication Campaign.
 * Updated the CommunicationCampaign proxy model attributes.
 * Added transaction_grouping_interval to AlgorithmTestRun proxy model.
