--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Added recommended_budget_status to the MemberInsightMetrics model.
+
 === 0.5.21 2015-01-21
 
 * Added payment related fields to CompanySubscription proxy model.
