--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.5.22 2015-02-05
+
+* Added MemberAggregateInsight proxy model.
 * Added recommended_budget_status to the MemberInsightMetrics model.
 
 === 0.5.21 2015-01-21
