updating a spelling mistake in the Changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 === 0.5.23 2015-02-18
 
-* Add account_leve_transition parameter to company_subscription.create
+* Add account_level_transition parameter to company_subscription.create
 * Updated parameter lists when changing a company account level.
 * Renamed Company.creation_date to freetrial_start_date for both V1 and V2.
 
