[addresses #92665504] - added support for account_manager_todo_list method

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* added V2::AccountManagerTodo todo_list method
 * added V2::AccountManager member_call_summary method
 * Renamed call_counts_by_attempt to call_counts_by_priority.
 * Added priority to MemberCall proxy model.
