--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 === 0.5.29
 
 * Added Enterprise review list method to V2::Review
+* Added count attributes to enterprise.
 
 === 0.5.28
 * added description, abbreviated_name, latitude, longitude fields to enterprise
