--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+* Added activity_by_account_manager call to the V2::AccountManagerMetrics class.
 * Added company_status_counts call to the V2::AccountManagerMetrics class.
 
 === 0.5.29
