--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+=== 0.5.30
+* added event_fees and events to V2::MonthlyRecurringRevenue
 === 0.5.29
 
 * Added Enterprise review list method to V2::Review
