[addresses #96618574] - fixed typo

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 === 0.5.31
-* added status and gernerated_at to MemberInsightMetrics
+* added status and generated_at to MemberInsightMetrics
 === 0.5.30
 === 0.5.29
 
