--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
+=== 0.5.35
+
+* Added Direct Connect Contact and Transaction proxy models.
 
 === 0.5.34
-* added rank to AccountLevel 
+* added rank to AccountLevel
 * Renamed on hold count to declined count for Account Manager metrics.
 
 === 0.5.33
