--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
+=== 0.5.35
+* Created admin folder located under v2.
+* Created new CampaignIteration class with self.list method.
 
 === 0.5.34
-* added rank to AccountLevel 
+* added rank to AccountLevel
 * Renamed on hold count to declined count for Account Manager metrics.
 
 === 0.5.33
