[Addresses #95989112]Remove resetting of params in CustomerTransaction list
Why: it was setting it to empty params for every value of params you pass
in.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.5.37
+* fixed bug with handling params of customer_transaction list method.
+
 === 0.5.36
 * added CRUD operations to CategoryDefaultOfferTemplate
 
