CA-3706 Update Changelog and version after changing campaign_iterations url

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.5.42
+* Change campaign_iterations URL to hyphen from underscore.
+
 === 0.5.41
 * Added new invitation_delay_interval attributes to V2::CompanySetting class.
 
