--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.5.47
+* Added repeat_customer_transaction_threshold to AlgorithmTestRun.
+
 === 0.5.46
 * Added Workflow System Template proxy model.
 
