CA-3900 Add requires for DataUpload and LiveTrial
They were missing; the accounts project uses them so it was throwing an
exception when they weren't in the gem.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.5.48
+* Added requires for Lobbyist::DataUpload and Lobbyist::LiveTrial
+
 === 0.5.47
 * Added repeat_customer_transaction_threshold to AlgorithmTestRun.
 
