--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.5.49
+
+* Added regulatory and disclaimer fields to CommunicationCampaign and OfferTemplate.
+
 === 0.5.48
 
 * Added requires for Lobbyist::DataUpload and Lobbyist::LiveTrial
