--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.5.51
+* Added contact params for update on V2::Review
+
 === 0.5.50
 * Added review_date and customer_full_name to V2::Review
 
