--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.5.56
+
+* Reverting review parameter handling to fix member area bug.
+
 === 0.5.55
 * Update accessors for MemberAggregateInsight and MemberInsightMetrics
 === 0.5.54
