CA-4059 Refactoring lobbyist error handling.
Improved the code to handle the 500 series error more gracefully. Also fixed the existing tests.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 0.5.58
+
+* Handle 500 series errors from the API. This will prevent the 'Unparsable Response' errors that
+  are caused by attempting to parse HTML as JSON.
+* Fixed the unit tests.
+
 === 0.5.57
 * Added name method in V2::EnterpriseUser
 
