--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,9 @@
 
 * Added requires for Lobbyist::V2::RecommendedBudget
 
+=== 0.5.58
+* Make reset method usable for twitter as well as facebook
+
 === 0.5.57
 * Added name method in V2::EnterpriseUser
 
