--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.5.60
+* Added Lobbyist::V2::AdminUser
+* Update and Create methods
+
 === 0.5.59
 
 * Added requires for Lobbyist::V2::RecommendedBudget
