[CA-4077] Added destroy method from V2 CustomerCall

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.6.1
+* Added destroy method from Lobbyist::V2::CustomerCall
+
 === 0.6.0
 
 * Handle 500 series errors from the API. This will prevent the 'Unparsable Response' errors that
