--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.5.60
+
+* Added DirectConnectMileage and DirectConnectVehicle for vehicle data processing.
+
 === 0.5.59
 
 * Added requires for Lobbyist::V2::RecommendedBudget
