--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.1
+
+* Added require statement for monthly_recurring_revenue proxy model.
+
 === 0.6.0
 
 * Handle 500 series errors from the API. This will prevent the 'Unparsable Response' errors that
