CA-4021 Updated WorkflowSystem attributes.
Why: They were out of date with the actual fields. Both V1 and V2 are now current.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.5
+
+* Brought the attributes for WorkflowSystem up to date for both V1 and V2.
+
 === 0.6.4
 
 * Added require statement for monthly_recurring_revenue proxy model.
