--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.9
+
+* Removed invalid company status updating logic from the Company.update method.
+
 === 0.6.8
 
 * Added Support for CategoryAggregateInsights
