--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+
+=== 0.6.10
+
+* remove ":repeat_customer_revenue" and  ":new_customer_revenue" response for MemberInsightMetrics
+
 === 0.6.9
 
 * Added ":repeat_customer_revenue" and  ":new_customer_revenue" to metrics response for MemberInsightMetrics
