--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.13
+
+* Added DirectConnectMileage and DirectConnectVehicle for vehicle data processing.
+
 === 0.6.12
 
 * Added DirectConnectMileage and DirectConnectVehicle for vehicle data processing.
