--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 === 0.6.13
 
+* Added CampaignIterationResult
+
+=== 0.6.13
+
 * Added DirectConnectMileage and DirectConnectVehicle for vehicle data processing.
 
 === 0.6.12
