--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.14
+
+* Added Company User parameter to company create method for V2.
+
 === 0.6.13
 
 * Added DirectConnectMileage and DirectConnectVehicle for vehicle data processing.
