--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.15
+
+* Added some new attributes to V2::Customer to support the member area action menus.
+
 === 0.6.14
 
 * Added Company User parameter to company create method for V2.
