--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.15
+
+* Added new smart invite setting attributes for custom smart invites.
+
 === 0.6.14
 
 * Added Company User parameter to company create method for V2.
