--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+=== 0.6.17
+
+* Added retry count attribute to data uploads.
+
+=== 0.6.16
+
+* Added new smart invite setting attributes for custom smart invites.
+
 === 0.6.15
 
 * Added some new attributes to V2::Customer to support the member area action menus.
