--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
+=== 0.6.19
+
+* Added iterations_count attributes for Lobbyist::V2::CommunicationCampaign
+
 === 0.6.18
+
 * Added destroy method from Lobbyist::V2::CommunicationCampaign
 
 === 0.6.17
