--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.6.22
+
+* remove fields :exclude_referral_marketing, :exclude_retention_marketing, :auto_review_draft_key from
+Lobbyist::V2::Contact and Lobbyist::Contact
+
 === 0.6.21
 
 * Added token_acquired_at, fetch_frequency, data_processing_enabled attributes for ScottySetting
