--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.24
+* remove fields :enable_referral_marketing, :enable_retention_marketing, :sugar_lead_id,
+and :sugar_opportunity_id from Lobbyist::Company and Lobbyist::V2::Company
+
 === 0.6.23
 
 * remove fields :exclude_referral_marketing, :exclude_retention_marketing, :auto_review_draft_key from
