--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.6.25
+* Added field :tax_exempt to Promo
+
 === 0.6.24
 * remove fields :enable_referral_marketing, :enable_retention_marketing, :sugar_lead_id,
 and :sugar_opportunity_id from Lobbyist::Company and Lobbyist::V2::Company
