--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.6.29
+* Added current_balance to CommunicationCampaign
+
 === 0.6.28
 * Removed references to recommended_budget and monthly_budget columns
 
