--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.6.33
+* Added charge method to Lobbyist::V2::CommunicationCampaign
+* Added campaign_enabled attr_accessor to Lobbyist::V2::AccountLevel
+
 === 0.6.32
 * moved Lobbyist::V1:CustomerCalls controller to Lobbyist::V2:CustomerCalls
 
