--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.4
+* Added V2::Company.update_splitter_direct_connect method.
+
 === 0.7.3
 * Added Lobbyist::V2::MasterCustomerCall
 * Added Lobbyist::V2::CompanyCustomerCall
