--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.5
+* Added workflow_system_used to V1 and V2 DataUpload.
+
 === 0.7.4
 * Added V2::Company.update_splitter_direct_connect method.
 
