--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.7.8
+
+* Added DirectConnectServiceContract for service contract processing.
+
 === 0.7.7
 * Added Lobbyist::V2::CampaignAnalysis
 
