--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.7.9
+
+* Added CompanyMailCreditAudit for auditing credit changes
+
 === 0.7.8
 
 * Added DirectConnectServiceContract for service contract processing.
