--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.7.11
+
+* Added SplitMapping destroy method.
+# Added Company disable-direct-connect-splitting method.
+
 === 0.7.10
 
 * Added AmAssignableCompany and AmUnassignableCompany.
