--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-=== 0.7.11
+===
+
+* Renamed CustomerMetrics to CustomerFilterMetrics.
+
+=== 0.7.12
 
 * Added SplitMapping destroy method.
 # Added Company disable-direct-connect-splitting method.
