--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.7.14
+
+* Use WorkflowSystem instead of WorkflowSystemTemplate
+
 === 0.7.13
 
 * Added display_name to Lobbyist::V2::WorkflowSystem
