--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.7.15
+
+* Added CommunicationPreferencesHelper module to help with parsing the new
+  contact.communication_preferences bit field.
+
 === 0.7.14
 
 * Added Lobbyist::V2::Filter endpoints.
