--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
+=== 0.7.24
+* add column otp to V2::CompanyUser and CompanyUser.
+
 === 0.7.23
 * Move ReviewDraft to V2.
+
 === 0.7.22
 * Added webhook information to scotty settings.
 
