--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 === 0.7.24
-* add column otp to V2::CompanyUser and CompanyUser.
+* add column otp to V2::CompanyUser.
 
 === 0.7.23
 * Move ReviewDraft to V2.
