--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
-=== 0.7.27
+=== 0.7.28
 * Added widget_color to V2::CompanySetting
+
+=== 0.7.27
+* Added Lobbyist::V2::Filter#destroy_tags
 
 === 0.7.26
 * Added Lobbyist::V2::CustomEmailTemplate
