CA-6679 Change from in_progress to in_process

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.30
+* Modified the CommunicationCampaign#results method to in_progress
+
 === 0.7.29
 * Added Lobbyist::V2::CustomEmailTemplate
 
