--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.36
+* add new field review_page_display_element to CompanySettings V1 and V2
+
 === 0.7.35
 * add new field reply_name to V2::CustomEmailTemplate
 
