--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.7.36
+* Changed the revenue_by_account_manager call to be a collection.
+* Changed the mrr_summary call to be a collection.
+
 === 0.7.35
 * add new field reply_name to V2::CustomEmailTemplate
 
